syntax = "proto3";
import "HeaderProto.proto";
import "PayloadProto.proto";

message BlockProtoMessage {

    message AdProofsOpt {
        bytes headerId = 1;
        bytes proofBytes = 2;
    }

    HeaderProtoMessage header = 1;
    PayloadProtoMessage payload = 2;
    AdProofsOpt adProofsOpt = 3;
}